fixed nav spacing, added mobile styles in flex-row block for project 1 and 2 descriptions

--- a/assets/styles/base/_mixins.css
+++ b/assets/styles/base/_mixins.css
@@ -1,11 +1,11 @@
 @define-mixin atSmall {
-    @media (min-width: 480px) {
+    @media (min-width: 768px) {
         @mixin-content;
     }
 }
 
 @define-mixin atMedium {
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
         @mixin-content;
     }
 }
