--- a/assets/styles/modules/_flex-row.css
+++ b/assets/styles/modules/_flex-row.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   flex-flow: row wrap;
+  align-content: center;
   @mixin atMedium {
   }
 
@@ -17,6 +18,13 @@
     align-items: center;
   }
 
+  &--wrap-until-small {
+    flex-flow: row wrap;
+    @mixin atSmall {
+      flex-flow: row nowrap;
+    }
+  }
+
   &--gutters {
     margin-right: -45px;
   }
@@ -27,24 +35,42 @@
   }
 
   &__item-half {
-    position: relative;
-    flex: none;
+  }
+
+  &__item-half--flex-until-small {
+    @mixin atSmall {
+      flex: none;
+    }
   }
 
   &__item-half--extra-small {
-    width: 408px;
+    max-width: 408px;
   }
 
   &__item-half--small {
-    width: 478px;
+    @mixin atSmall {
+      max-width: 396px;
+    }
+    @mixin atMedium {
+      max-width: 478px;
+    }
   }
 
   &__item-half--large {
-    width: 538px;
+    margin-top: 1rem;
+    max-width: 538px;
+    @mixin atSmall {
+      margin-top: 0rem;
+    }
   }
 
   &__item-half--extra-large {
-    width: 608px;
+    @mixin atMedium {
+      max-width: 538px;
+    }
+    @mixin atLarge {
+      max-width: 608px;
+    }
   }
 
   &__item-half img {
@@ -52,7 +78,13 @@
     height: auto;
   }
 
-  &__item-half:first-child {
+  &__item-half--right-margin-until-small {
+    @mixin atSmall {
+      margin-right: 64px;
+    }
+  }
+
+  &__item-half--right-margin-until-medium {
     @mixin atMedium {
       margin-right: 64px;
     }
