--- a/assets/styles/modules/_link.css
+++ b/assets/styles/modules/_link.css
@@ -1,11 +1,11 @@
 .link {
   margin-right: 1rem;
-  font-size: 1.125rem;
   line-height: 1.65;
   font-weight: 500;
   color: $mainOrange;
   text-decoration: none;
   @mixin atSmall {
+    font-size: 1.125rem;
   }
 
   &:hover {
@@ -15,10 +15,14 @@
     margin-top: 1px;
     margin-right: 3px;
     display: inline-block;
-    width: 1rem;
-    height: 1rem;
+    width: 0.9rem;
+    height: 0.9rem;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
+    @mixin atSmall {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 }
