--- a/assets/styles/modules/_subsection.css
+++ b/assets/styles/modules/_subsection.css
@@ -1,10 +1,6 @@
 .subsection {
-  margin-top: 1.2rem;
-  margin-bottom: 1.2rem;
-  @mixin atMedium {
-    margin-top: 4rem;
-    margin-bottom: 5rem;
-  }
+  margin-top: 4rem;
+  margin-bottom: 5rem;
 
   &--narrow {
     @mixin atMedium {
